# vt-src

./: .gitignore  pyproject.toml
dataset_tools/: merge_and_push.sh  print_episode_timeframes.py  show_tasks.py  task_per_episode.py  update_task_name.py
docs/: camera_config.md  frame_processor_usage.txt  transfering_to_from_vastai.txt
perception/bounding_box/: yolo11_video_inference.py  yolo_coreml_video_inference.py
perception/color_detection/: crop_bboxes_yolo.py
perception/multi_stage/: batch_annotate_parallel.sh
perception/segmentation/: roboflow_live_cam_local.py  roboflow_segment_recorded_video_local.py  yolo_coreml_segment_video.py  yolo_cuda_segment_video.py
perception/training_scripts/: train_segmentation_yolo11.ipynb  train_wire_bbox_rfdetr.ipynb  train_wire_bbox_yolo11.ipynb  train_wire_color.ipynb
vt_perception/: __init__.py  frame_processor.py
vt_perception/bbox_detectors/: __init__.py  base.py  rfdetr.py  yolo.py
vt_perception/detectors/: README.md  __init__.py  breaker_segmentation.py  wire_detection.py
vt_perception/processors/: README.md  __init__.py  breaker_segmentation_processor.py  wire_detection_processor.py
